CSS/main.css
/* ... */
.mag-images div {
  width: 170px;
  height: 228px;
}

.mag-images div:last-child {
  position: absolute;
  top: 13px;
  left: 80px;
}

.subInfo h3,
.newsInfo h3 {
  font: bold 20px/28px 'Roboto Condensed', sans-serif;
  color: #000;
  position: relative;
  margin-bottom: 15px;
}

.subInfo p,
.newsInfo p {
  font: 300 15px/21px 'Helvetica Neue Light', Helvetica, Arial, sans-serif;
  margin-bottom: 25px;
}

.subInfo a {
  text-decoration: none;
}

.subInfo a span,
.newsInfo a span {
  font: bold 18px/18px 'Roboto Condensed', sans-serif;
  display: inline-block;
  padding: 10px 10px 10px 12px;
  color: white;
  margin-bottom: 0;
  background-color: #f72210;
}

.subInfo a span:hover,
.newsInfo a span:hover {
  background-color: #de1f0e;
}

.subInfo a svg,
.newsInfo a svg {
  display: inline-block;
  enable-background: new 0 0 8 14;
  fill: white;
  width: 8px;
  height: 14px;
  margin-left: 5px;
  margin-bottom: 4px;
}

.newsletter {
  margin-bottom: 40px;
}

.newsletter .img-fluid {
  background: url('../Assets/Img/newsletter.png') center center / cover no-repeat;
  height: 160px;
  flex: none;
}

.newsInfo {
  text-align: center;
  border: 1px solid #ebebeb;
  padding: 20px;
  flex: 1;
}





/** FOOTER ------------------------------------------------- */
.page-footer {
  max-width: 1310px;
  border-top: 2px solid #f4f5f6;
  background-color: white;
  padding-top: 30px;
  padding-bottom: 30px;
}

.footer-top > div a svg {
  display: block;
  width: 236px;
  height: 36px;
  margin-right: 15px;
  margin-bottom: 12px;
  fill: #f72210;
  enable-background: new 0 0 395.6 60;
}

.copyright {
  font: normal 12px/12px Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  color: #666;
  margin-bottom: 12px; 
}

.footer-social {
  margin-bottom: 12px;
}

.footer-social li {
  margin-left: 15px;
}

.footer-social li:first-child {
  margin-left: 0;
}

.footer-social li a {
  line-height: 24px;
  font-size: 23px;
  vertical-align: top;
  text-align: center;
  display: block;
  text-decoration: none;
  color: #666;
  cursor: pointer;
}

#fS1:hover {
  color: #3b5998;
}

#fS2:hover {
  color: #1da1f2;
}

#fS3:hover {
  color: #405de6;
}

#fS4:hover {
  color: #35465c;
}

#fS5:hover {
  color: #0077b5;
}

.footer-links {
  border-top: 1px solid #d9d9d9;
  padding-top: 6px;
  font-size: 14px;
  line-height: 15px;
  color: #666;
}

.footer-editions label {
  margin-top: 6px;
  margin-right: 15px;
  margin-bottom: 0;
}

.menu {
  margin: 0;
}

.menu li {
  display: inline-block;
  padding-right: 20px;
  margin: 6px 0;
  cursor: pointer;
}

.menu li a {
  display: block;
  text-decoration: none;
  color: #666;
}

/* MEDIA QUERIES ------------------------------*/
/*? Small devices ----------------------------------------------------*/
@media (max-width: 480px) {
  .mq-masthead {
    padding-left: 0;
  }
  
  .header-buttons a {
    font: bold 14px/14px 'Roboto Condensed', sans-serif;
    padding: 6px 3px !important;
  }

  .header-buttons svg {
    display: none;
  }

  #mobNavIcon {
    transform: scaleX(1);
    padding: 0 25px 0 15px;
  }

}
/*? Medium devices (tablets, 768px and up) ----------------------------*/
@media(min-width: 768px) {
  .menu li:not(.liLast) {
    border-right: 1px solid #d9d9d9;
    padding-right: 10px;
    margin-right: 10px;
  }
}


/*? Medium devices (tablets, 992px and under) ----------------------------*/
@media (max-width: 992px) {
  .page-header,
  .page-header > .container {
    width: 100%;
    height: 50px;
  }

  .headerNavbar {
    justify-content: flex-end !important;
  }

  .header-bottom {
    max-width: 220px;
    height: 100vh;
    position: absolute;
    right: -220px;
    padding: 0;
    margin: 0;
    overflow-y: scroll;
  }

  #navbarContainer {
    margin: 10px !important;
  }

  #navbarContainer,
  .searchNav {
    height: 20px;
    width: 100%;
    position: relative;
    right: 0;
    margin: 0;
  }

  .header-bottom form {
    height: 100%;
    width: auto;
  }

  .search-icon {
    top: 0;
    right: 20px;
    z-index: 200;
  }

  .header-bottom form input {
    width: 100% !important;
    height: auto;
  }
  
  .searchNav {
    height: 21px !important;
    margin-left: 5px;
  }

  .navbar-nav {
    position: relative;
    top: 2px;
  }

  .nav-item {
    max-width: 203px;
    height: 34px;
    text-align: left;
    border: none !important;
  }

  .nav-link {
    padding: 5px 15px !important;
  }

  .nav-item:hover a {
    background-color: black !important;
    color: white !important;
  }

  .nav-link::after {
    content: "";
    display: inline-block;
    vertical-align: middle;
    width: 8px;
    height: 14px;
    -webkit-mask-image: url(https://g.newsweek.com/www/images/icon-arrow-right.svg);
    mask-image: url(https://g.newsweek.com/www/images/icon-arrow-right.svg);
    background-color: rgba(0,0,0,.55);
    margin-left: 10px;
    margin-top: 6px;
    position: absolute;
    right: 15px;
  }

  .nav-item:hover .nav-link::after {
    background-color: #f72210 !important;
  }


}

/*? Large devices (desktops, 992px and up)---------------------------- */
@media (min-width: 992px) {
  .header-top {
    height: 95px;
  }

}

/*? Extra large devices (large desktops, 1200px and up)--------------- */
@media (min-width: 1200px) {

}

